--- a/mod/data/field/latlong/mod.html
+++ b/mod/data/field/latlong/mod.html
@@ -8,6 +8,14 @@
         <td class="c1"><input class="fielddescription" type="text" name="description" id="description" value="<?php p ($this->field->description);?>" /></td>
     </tr>
     <tr>
+        <td class="c0"><label for="private"><?php echo get_string('fieldprivate', 'data'); echo(' ' . $OUTPUT->help_icon('privatefield', 'data')); ?></label></td>
+        <td class="c1"><input class="fieldprivate" type="checkbox" name="private" id="private" <?php p(!empty($this->field->private)?"checked=\"checked\"":""); ?>/></td>
+    </tr>
+    <tr>
+        <td class="c0"><label for="required"><?php echo get_string('fieldrequired', 'data'); echo(' ' . $OUTPUT->help_icon('requiredfield', 'data')); ?></label></td>
+        <td class="c1"><input class="fieldrequired" type="checkbox" name="required" id="required" <?php p(!empty($this->field->required)?"checked=\"checked\"":""); ?>/></td>
+    </tr>
+    <tr>
         <td class="c0"><label for="param1"><?php echo get_string('latlonglinkservicesdisplayed', 'data'); ?></label></td>
         <td class="c1">
           <select class="linkservicesdisplayed" name="param1[]" id="param1" multiple="multiple" size="<?php p(sizeof($this->linkoutservices)); ?>">
